# tree-sitter-rpgle

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  example-file-4.txt  example.rpgle  example2.sqlrpgle  full-example.rpgle  go.mod  grammar.js  log.txt  output_generate.txt  package.json  pyproject.toml  setup.py  testfile.txt  tree-sitter.json
bindings/c/: tree-sitter-rpgle.pc.in
bindings/c/tree_sitter/: tree-sitter-rpgle.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rpgle/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRpgleTests/: TreeSitterRpgleTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
utils/: build-tree-sitter.ps1
