[package]
name = "tree-sitter-rpgle"
description = "Parser for RPGLE"
version = "0.1.0"
authors = ["Nian Vrey <51823073+YoungVoid@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rpgle"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/youngvoid/tree-sitter-rpgle"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
